Reorganized App.js and styles

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,8 @@
       content="Personal Spending Tracker"
     />
 
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> -->
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-    <title>Personal Spending Tracker - learning Redux</title>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">  
+  <title>Personal Spending Tracker - learning Redux</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
