Added new feature to display icons in place of category names

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Personal Spending Tracker"
     />
 
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">  
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">  
   <title>Personal Spending Tracker - learning Redux</title>
   </head>
   <body>
